resolved some comments on pull request
