# api/controllers/miners.js
@@ -8,7 +8,8 @@ function getMiners(req, res) {
 
     // If there is a query param, else it is the default
     if (_.has(req.query, 'q')) {
-        options.q = req.query.q;
+        options.query = {name : "/.*" + req.query.q + ".*/"};
+
     }
 
     options.sort = [['_id', 'desc']];
@@ -26,10 +27,7 @@ function getMiners(req, res) {
 function registerNewMiners(req, res) {
     let newMiner = req.body;
 
-    miner.validateMiners(newMiner)
-        .then(function() {
-            return miner.registerMiners(newMiner);
-        })
+    miner.registerMiners(newMiner)
         .then(function(numInserted) {
             return res.json(200, {message: `Registered ${numInserted} miners`});
         })
@@ -41,16 +39,17 @@ function registerNewMiners(req, res) {
 
 function modifyMinerDescription(req, res) {
     let fetchedMiner;
-    let miner_id = req.path;
+    let miner_id = req.swagger.params.miner_id.value;
     let patchedMiner = req.body;
 
     miner.fetchById(miner_id)
         .then(function(resultMiner) {
             fetchedMiner = resultMiner;
-            return miner.updateDescription(fetchedMiner._id, patchedMiner.description);
+            fetchedMiner.description = patchedMiner.description;
+            return miner.updateDescription(fetchedMiner);
         })
-        .then(function(transformer) {
-            return res.json(200, transformer(fetchedMiner));
+        .then(function() {
+            return res.json(200, fetchedMiner);
         })
         .catch(function(err) {
             console.log(err);
